2005-09-07  Christopher Faylor  <cgf@timesys.com>

	* hookapi.cc (rvadelta): Change argument to DWORD to eliminate a
	compiler warning.

	* path.h (path_conv::set_cygexec): New function.
	* spawn.cc (av::iscygwin): Eliminate.
	(av::av): Don't initialize iscygwin.
	(spawn_guts): Just use real_path.iscygexec for all tests.
	(av::fixup): Short circuit test if .exe extension and known cygexec.
	Set cygexec flag appropriately if we find that program uses cygwin1.dll.

2005-09-06  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (initial_env): Don't attempt stracing if dynamically loaded.
	(dll_crt0_0): Move console initialization earlier.
	* init.cc (dll_entry): Move console initialization here.
	* exceptions.cc (init_console_handler): Fully remove any old console
	handler.
	(handle_sigsuspend): Make cancelable when called from non-main thread.

	* spawn.cc (spawn_guts): Don't fill out windows argv if we've deduced
	that this is a cygwin-using program.
	(av::fixup): Always check executables to see if they are using
	cygwin1.dll.  Don't consider .com files to be scripts.
	* hookapi.cc (rvadelta): New function.
	(PEHeaderFromHModule): Simplify slightly.
	(hook_or_detect_cygwin): Use passed in name argument for "HMODULE"
	rather than incorrectly reading current program.  Calculate delta
	needed to read image data and file names if this isn't a real
	"HMODULE".

2005-09-06  Corinna Vinschen  <corinna@vinschen.de>

	* thread.h: Revert patch from 2005-09-05.
	* thread.cc (pthread_mutex::can_be_unlocked): Return true also if
	mutex is owned by MUTEX_OWNER_ANONYMOUS.

2005-09-05  Christopher Faylor  <cgf@timesys.com>

	* cygheap.cc (cygheap_init): Eliminate debugging #if.

	* fork.cc (fork_parent): Don't issue errors if "somebody" has set the
	PID_EXITED flag on a child.  Don't close process handle if it has
	potentially already been closed.
	* pinfo.cc (winpids::add): Eliminate PID_ALLPIDS handling which was
	obsoleted by previous changes.
